# InnoHack-Mark2

./: .buildpacks  .env  .eslintignore  .eslintrc.json  .gitmodules  Procfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
backend/: .env  .gitignore  pyproject.toml  requirements.txt
backend/account/: models.py  serializers.py  views.py
backend/api/: schema.py  urls.py
backend/archive_extract/__MACOSX/: ._bbmri-53323851.dcm
backend/django_app/: auth.py  middlewares.py  urls.py
backend/django_app/settings/: __init__.py  advanced_settings.py  settings.py  utils.py
backend/django_app/storages/: yandex.py
backend/runner/: django_run_server_sync.sh  runner.sh
backend/snapshot/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/snapshot/migrations/: 0001_initial.py  0002_snapshot_preview.py  0003_alter_snapshot_snapshot_collection.py  0004_alter_snapshot_snapshot_collection.py  0005_alter_snapshotcollection_type_collection.py  0006_auto_20221106_1919.py
backend_neural/: .env  Dockerfile  GAN_generation_COVID19.py  README.md  api_config.yml  app.py  download_models.py  global_utils.py  interpolate.py  neural.py  requirements.txt
backend_neural/runner/: flask_run_server.sh  neural_download_models.sh
config/: nginx.conf  nginx.conf.erb
frontend/: .env  .eslintrc.json  Dockerfile  runfrontend  tsconfig.json
frontend/public/: index.html
heroku/: .buildpacks  .env  create_requirements.sh  heroku_deploy.sh  heroku_init.sh  init_stuff.sh  run_server.sh  stop_server.sh
src/: App.tsx  setupProxy.js
(+99 files in other folders)
