[tool.poetry]
name = "idahack-mark2"
version = "0.1.0"
description = ""
authors = ["Aleksandr Sokolov <bigpewm@gmail.com>"]
readme = "README.md"
packages = [{include = "idahack_mark2"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

