[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aleksandr Sokolov <bigpewm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.16"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
drf-yasg = "^1.21.4"
extras = "^1.0.0"
validation = "^0.8.3"
django-on-heroku = "^1.1.2"
gunicorn = "^20.1.0"
django-colorfield = "^0.7.2"
boto3 = "^1.26.3"
django-storages = "^1.13.1"
pydicom = "^2.3.0"
pillow = "^9.3.0"
pypng = "^0.20220715.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
